@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/apptools/apptools-4.2.0-r1.ebuild,v 1.1 2013/04/16 16:04:21 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/apptools/apptools-4.2.0-r1.ebuild,v 1.2 2014/06/27 02:17:24 floppym Exp $
 
 EAPI=5
 
@@ -37,7 +37,6 @@ python_compile_all() {
 }
 
 python_test() {
-	export TMPDIR="${T}"
 	VIRTUALX_COMMAND="nosetests" virtualmake
 }
 
