@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/apptools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/apptools/ChangeLog,v 1.24 2014/05/02 04:22:47 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/apptools/ChangeLog,v 1.25 2014/06/27 02:17:25 floppym Exp $
+
+  27 Jun 2014; Mike Gilbert <floppym@gentoo.org> apptools-4.2.0-r1.ebuild,
+  apptools-4.2.1.ebuild:
+  Remove unnecessary setting of TMPDIR.
 
 *apptools-4.2.1 (02 May 2014)
 
